--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: "Arial", sans-serif;
+  font-family: 'Funnel Display', sans-serif;
 }
 
 .body-general {
@@ -39,8 +39,8 @@
 }
 
 .logo-texto {
-  font-size: 1.2em;
-  font-weight: bold;
+  font-family: 'Lobster';
+  font-size: 1.8em;
   color: #333;
 }
 
@@ -63,18 +63,22 @@
 
 .boton-menu {
   background-color: #d8c9b3;
-  border: 2px solid #a38d7a;
+  border: 1px solid #a38d7a;
   border-radius: 20px;
   padding: 8px 25px;
   font-size: 1em;
   cursor: pointer;
   color: #333;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
   transition: background-color 0.3s, border-color 0.3s;
+  transition: all 0.2s ease-in-out;
   outline: none;
 }
 
 .boton-menu:hover {
   background-color: #e2d7c5;
+  transform: translateY(-2px);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.25);
 }
 
 .buscador-contenedor {
@@ -109,14 +113,18 @@
   background-color: #d8c9b3;
   border: 1px solid #a38d7a;
   border-radius: 10px;
-  width: 300px;
-  height: 180px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 1.5em;
-  color: #555;
-  font-weight: bold;
+  flex: 1 1 48%; /* cambié los tamaños fijos por propiedad flex para que las imagenes cambien de tamaño, hasta 48% del ancho total */
+  max-width: 600px;
+  overflow: hidden; /* Esto es para que la imagen no se salga de la caja */
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 
+              0 10px 20px rgba(0, 0, 0, 0.2);
+}
+
+.caja-foto img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
 }
 
 .caja-descripcion {
@@ -132,6 +140,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 
+              0 10px 20px rgba(0, 0, 0, 0.2);
 }
 
 .footer-principal {
