Cambios en la imagen del logo, css del titulo para agregar una linea por debajo, para que no quede tan vacío.
Agrego un par de comentarios para mejorar la legibilidad del codigo.

--- a/style.css
+++ b/style.css
@@ -27,8 +27,8 @@
 }
 
 .logo-imagen {
-  width: 100px;
-  height: 50px;
+  width: 150px;
+  height: 75px;
   background-color: #ffffff;
   border: 1px solid #ccc;
   display: flex;
@@ -39,9 +39,21 @@
 }
 
 .logo-texto {
-  font-family: 'Lobster';
-  font-size: 1.8em;
+  font-family: 'Lobster', cursive;
+  font-size: 2.2em;
   color: #333;
+  position: relative;
+  padding-bottom: 5px;
+}
+
+.logo-texto::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: #585858;
 }
 
 #NavBar {
