--- a/style.css
+++ b/style.css
@@ -194,11 +194,11 @@
   display: none;
 }
 
-.licales-lista {
+.locales-lista {
   list-style: none;
   padding: 0;
   margin: 0;
-  background-color: #ffffff;
+  background-color: white;
 }
 
 .locales-lista li {
@@ -214,8 +214,8 @@
 }
 
 .locales-lista li img{
-  width: 60px;
-  height: 60px;
+  width: 80px;
+  height: 80px;
   object-fit: contain;
   border: 1px solid #eee;
   border-radius: 4px;
