Corrijo un error con la tipografía que se causó por el uso de prettier rompiendo tags.

--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@
 }
 
 .logo-texto {
-  font-family: 'Lobster', cursive;
+  font-family: 'Lobster', sans-serif;
   font-size: 2.2em;
   color: #333;
   position: relative;
